<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokeDataCard"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/black">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:id="@+id/pokeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/pokeball"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/pokeball"
                android:src="@drawable/pokeball"
                />

            <TextView
                android:id="@+id/pokeDataNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toEndOf="@id/pokeball"
                android:layout_toRightOf="@id/pokeball"
                android:text="@string/unknown" />

            <TextView
                android:id="@+id/pokeDataSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/pokeDataNum"
                android:text="@string/unknown"
                android:layout_toEndOf="@id/pokeDataNum"
                android:layout_marginStart="30dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pokeTitle"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/pokeDataImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/pokemon_data_image"
                android:src="@drawable/ic_launcher_background" />

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:layout_toEndOf="@id/pokeDataImage"
                android:layout_toRightOf="@id/pokeDataImage"
                android:background="@android:color/holo_orange_light">
                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="190dp"
                    android:background="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    >
                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/type"
                    android:id="@+id/pokeTypeLabel"/>


                <TextView
                    android:id="@+id/pokeType1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:layout_below="@id/pokeTypeLabel"
                    android:text="@string/unknown"
                    android:textStyle="bold"/>

                <TextView

                    android:id="@+id/pokeType2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeType1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/unknown"
                    android:visibility="visible"
                    android:textStyle="bold"/>
            </RelativeLayout>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/pokeDataImage"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:background="@android:color/holo_purple"
                >
            <RelativeLayout
                android:id="@+id/pokeDataAttributes"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:padding="5dp"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/pokeColorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/poke_color"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/pokeColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/pokeColorLabel"
                    android:layout_toRightOf="@id/pokeColorLabel"
                    android:text="@string/unknown"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/pokeHeightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeColorLabel"
                    android:layout_margin="5dp"
                    android:text="@string/height" />

                <TextView
                    android:id="@+id/pokeHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeColor"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@id/pokeHeightLabel"
                    android:layout_toRightOf="@id/pokeHeightLabel"
                    android:text="@string/unknown"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pokeWeightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeHeightLabel"
                    android:layout_margin="5dp"
                    android:text="@string/weight" />

                <TextView
                    android:id="@+id/pokeWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeHeight"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@id/pokeWeightLabel"
                    android:layout_toRightOf="@id/pokeWeightLabel"
                    android:text="@string/unknown"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pokeDataStats"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:padding="5dp"

                android:background="@android:color/white"
                android:layout_toEndOf="@id/pokeDataAttributes"
                android:layout_toRightOf="@id/pokeDataAttributes"
                >

                <TextView
                    android:id="@+id/pokeStatHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/healh_points" />

                <TextView
                    android:id="@+id/pokeStatAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeStatHP"
                    android:text="@string/attack" />

                <TextView
                    android:id="@+id/pokeStatDefense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeStatAttack"
                    android:text="@string/defense" />

                <TextView
                    android:id="@+id/pokeStatSAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeStatDefense"
                    android:text="@string/special_attack" />

                <TextView
                    android:id="@+id/pokeStatSDefense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeStatSAttack"
                    android:text="@string/special_defense" />

                <TextView
                    android:id="@+id/pokeStatSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pokeStatSDefense"
                    android:text="@string/speed" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:padding="5dp"
                android:layout_toEndOf="@id/pokeDataStats"
                android:layout_toRightOf="@id/pokeDataStats"
                android:background="@android:color/white"
                >

                <TextView
                    android:id="@+id/hpNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/attackNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hpNum"
                    android:text="@string/unknown"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/defenseNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/attackNum"
                    android:text="@string/unknown"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sAttackNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/defenseNum"
                    android:text="@string/unknown"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sDefenseNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sAttackNum"
                    android:text="@string/unknown"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/speedNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sDefenseNum"
                    android:text="@string/unknown"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="300dp"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>